reformatted multiple lines in multiple files